# tj

./: .gitignore  Cargo.toml  SPEC.md  release  todo.md
SPEC/: architecture.md  audio.md  browser.md  cache.md  config.md  deck.md  keymap.md  layout.md  mixer.md  overview.md  render.md  tags.md  transport.md  verification.md  waveforms.md
changes/active/feedback/: waveform-scroll-pulsation.md
changes/active/planning/: keyboard-layout-help.md  pan.md  playback-bugs.md  readme.md  render-bounds-crash.md
changes/active/ready/: deck-3.md
changes/archive/: 2026-03-29-browser-force-open.md  2026-03-29-browser-preview.md  2026-03-29-global-notification-style.md  2026-03-30-consistent-past-end-wave.md  2026-03-30-cue-end-of-track-reset.md  2026-03-31-no-bpm-beat-mode.md  2026-03-31-pitch-shift.md  2026-04-02-deck-mixer-structure.md  2026-04-02-keyboard-layout-help.md  2026-04-02-keyboard-layout.md  2026-04-03-deck-3.md  2026-04-03-key-rebinding.md  2026-04-03-playback-bugs.md  2026-04-04-beat-jump-display-glide.md
changes/archive/2026-03-06-bpm-sidecar/: design.md  proposal.md
changes/archive/2026-03-06-initial-implementation/: design.md  proposal.md
changes/archive/2026-03-06-waveform/: design.md  proposal.md
changes/archive/2026-03-07-background-loading/: design.md  proposal.md
changes/archive/2026-03-07-beat-jump/: design.md  (+1 more)
changes/open/: active.md  browser-preview.md
resources/: config.toml
src/: main.rs
src/audio/: mod.rs
src/browser/: mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/deck/: mod.rs
src/render/: mod.rs
src/tags/: mod.rs
(+319 files in other folders)
