[package]
name = "tj"
version = "0.5.102"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
blake3 = "1"
crossterm = "0.29.0"
ratatui = "0.30.0"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stratum-dsp = "1.0.0"
toml = "0.8"
symphonia = { version = "0.5.5", features = ["all"] }
color-eyre = "0.6.5"
